emoji_window/treeview_window.h



// 回调函数类型定义

// 基础回调：void callback(int node_id, void* context)
typedef void(__stdcall* TreeViewCallback)(int node_id, void* context);


// ============================================================================
// 节点选择
// ============================================================================

/**
 * 设置选中节点
 * @param hwnd 树形框窗口句柄
 * @param node_id 节点 ID
 * @return 成功返回 true，失败返回 false
 */
bool __stdcall SetSelectedNode(HWND hwnd, int node_id);


/**
 * 获取选中节点
 * @param hwnd 树形框窗口句柄
 * @return 选中节点的 ID，没有选中返回 -1
 */
int __stdcall GetSelectedNode(HWND hwnd);


// ============================================================================
// 节点属性
// ============================================================================

/**
 * 设置节点文本
 * @param hwnd 树形框窗口句柄
 * @param node_id 节点 ID
 * @param text UTF-8 编码的文本
 * @param text_len 文本字节长度
 * @return 成功返回 true，失败返回 false
 */
bool __stdcall SetNodeText(
    HWND hwnd,
    int node_id,
    const unsigned char* text,
    int text_len
);


/**
 * 获取节点文本
 * @param hwnd 树形框窗口句柄
 * @param node_id 节点 ID
 * @param buffer 接收文本的缓冲区
 * @param buffer_size 缓冲区大小
 * @return 实际文本字节长度，失败返回 -1
 */
int __stdcall GetNodeText(
    HWND hwnd,
    int node_id,
    unsigned char* buffer,
    int buffer_size
);


/**
 * 设置节点复选框状态
 * @param hwnd 树形框窗口句柄
 * @param node_id 节点 ID
 * @param checked 是否选中
 * @return 成功返回 true，失败返回 false
 */
bool __stdcall SetNodeChecked(HWND hwnd, int node_id, bool checked);


/**
 * 获取节点复选框状态
 * @param hwnd 树形框窗口句柄
 * @param node_id 节点 ID
 * @return 选中返回 1，未选中返回 0，失败返回 0
 */
BOOL __stdcall GetNodeChecked(HWND hwnd, int node_id);


// ============================================================================
// 侧栏模式与全局样式（多层级折叠菜单）
// ============================================================================

bool __stdcall SetTreeViewSidebarMode(HWND hwnd, bool enable);

bool __stdcall GetTreeViewSidebarMode(HWND hwnd);


bool __stdcall SetTreeViewRowHeight(HWND hwnd, float height);
bool __stdcall SetTreeViewItemSpacing(HWND hwnd, float spacing);
bool __stdcall SetTreeViewTextColor(HWND hwnd, unsigned int argb);

bool __stdcall SetTreeViewSelectedBgColor(HWND hwnd, unsigned int argb);


bool __stdcall SetTreeViewSelectedForeColor(HWND hwnd, unsigned int argb);


bool __stdcall SetTreeViewHoverBgColor(HWND hwnd, unsigned int argb);


bool __stdcall SetTreeViewFont(
    HWND hwnd,
    const unsigned char* family_utf8,
    int family_len,
    float font_size,
    int font_weight,
    bool italic
);


// ============================================================================
// 回调设置
// ============================================================================

/**
 * 设置树形框回调函数
 * @param hwnd 树形框窗口句柄
 * @param callback_type 回调类型（TreeViewCallbackType 枚举）
 * @param callback_func 回调函数指针
 * @return 成功返回 true，失败返回 false
 */
bool __stdcall SetTreeViewCallback(
    HWND hwnd,
    int callback_type,
    void* callback_func
);


// ============================================================================
// 拖放控制
// ============================================================================

/**
 * 启用/禁用拖放功能
 * @param hwnd 树形框窗口句柄
 * @param enable 是否启用
 * @return 成功返回 true，失败返回 false
 */
bool __stdcall EnableTreeViewDragDrop(HWND hwnd, bool enable);