examples/Csharp/Common/EmojiWindowNative.cs


        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetSelectedNode(IntPtr hTreeView, int nodeId);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetSelectedNode(IntPtr hTreeView);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetNodeText(IntPtr hTreeView, int nodeId, byte[] textBytes, int textLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern int GetNodeText(IntPtr hTreeView, int nodeId, IntPtr buffer, int bufferSize);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetNodeChecked(IntPtr hTreeView, int nodeId, [MarshalAs(UnmanagedType.Bool)] bool isChecked);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetNodeChecked(IntPtr hTreeView, int nodeId);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetTreeViewSidebarMode(IntPtr hTreeView, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool GetTreeViewSidebarMode(IntPtr hTreeView);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetTreeViewRowHeight(IntPtr hTreeView, float height);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetTreeViewItemSpacing(IntPtr hTreeView, float spacing);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetTreeViewTextColor(IntPtr hTreeView, uint color);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetTreeViewSelectedBgColor(IntPtr hTreeView, uint color);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetTreeViewSelectedForeColor(IntPtr hTreeView, uint color);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetTreeViewHoverBgColor(IntPtr hTreeView, uint color);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetTreeViewFont(IntPtr hTreeView, byte[] fontBytes, int fontLen, float fontSize, int weight, [MarshalAs(UnmanagedType.Bool)] bool italic);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool EnableTreeViewDragDrop(IntPtr hTreeView, [MarshalAs(UnmanagedType.Bool)] bool enable);

        [DllImport(DllName, CallingConvention = CallConv)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SetTreeViewCallback(IntPtr hTreeView, int callbackType, TreeViewCallback callback);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void show_message_box_bytes(IntPtr parent, byte[] titleBytes, int titleLen, byte[] messageBytes, int messageLen, byte[] iconBytes, int iconLen);

        [DllImport(DllName, CallingConvention = CallConv)]
        public static extern void show_confirm_box_bytes(IntPtr parent, byte[] titleBytes, int titleLen, byte[] messageBytes, int messageLen, byte[] iconBytes, int iconLen, MessageBoxCallback callback);
    }
}
